Exo 2 Two Way Binding

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,4 +6,9 @@
 			Exo01 : Property Binding (One-Way)
 		</a>
 	</li>
+	<li>
+		<a routerLink="/exos/exo02">
+			Exo02 : Property Binding (Two-Way)
+		</a>
+	</li>
 </ul>
