--- a/src/app/exos/exo01-property-binding/exo01-property-binding.component.html
+++ b/src/app/exos/exo01-property-binding/exo01-property-binding.component.html
@@ -1,22 +1,20 @@
 <h2>Exercice 01 - Créer son profil</h2>
 
-<div class="container">
-    <p>
-        Vous devez créer une application Angular pour permettre aux utilisateurs de créer leur propre profil personnel.
-        <br>
-        L'application doit contenir les champs suivants :
-    </p>
+<p style="font-weight: bold;">
+    Vous devez créer une application Angular pour permettre aux utilisateurs de créer leur propre profil personnel.
+    <br>
+    L'application doit contenir les champs suivants :
+</p>
 
-        <p> {{ nomComplet }} </p>
-        <p> {{ email }} </p>
-        <p> {{ dateNaiss.toLocaleDateString('fr-FR', { year: 'numeric', month: 'long', day: 'numeric' }) }} </p>
-        <p> {{ genre? 'Homme' : 'Femme' }}</p>
-        <p> {{ langues }} </p>
-        <p>
-					<img src="{{ image }}" style="width: 100px">
-				</p>
-</div>
+<p> {{ nomComplet }} </p>
+<p> {{ email }} </p>
+<p> {{ dateNaiss.toLocaleDateString('fr-FR', { year: 'numeric', month: 'long', day: 'numeric' }) }} </p>
+<p> {{ genre? 'Homme' : 'Femme' }}</p>
+<p> {{ langues }} </p>
+<p>
+    <img src="{{ image }}" style="width: 100px">
+</p>
 
 <a routerLink="">
-	<button class="btn btn-primary">Home</button>
+    <button class="btn btn-primary">Home</button>
 </a>
