Exo 3 Event Binding

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,4 +11,9 @@
 			Exo02 : Property Binding (Two-Way)
 		</a>
 	</li>
+	<li>
+		<a routerLink="/exos/exo03">
+			Exo03 : Event Binding
+		</a>
+	</li>
 </ul>
