Exo 4 Attribute Binding

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,4 +16,9 @@
 			Exo03 : Event Binding
 		</a>
 	</li>
+	<li>
+		<a routerLink="/exos/exo04">
+			Exo04 : Attribute Binding
+		</a>
+	</li>
 </ul>
