Exo 5 Base Routing

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,4 +21,9 @@
 			Exo04 : Attribute Binding
 		</a>
 	</li>
+	<li>
+		<a routerLink="/exos/exo05">
+			Exo05 : Base Routing
+		</a>
+	</li>
 </ul>
