Exo 8 Component Directives

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -36,4 +36,9 @@
 			Exo07 : Custom Pipes
 		</a>
 	</li>
+	<li>
+		<a routerLink="/exos/exo08">
+			Exo08 : Component Directives
+		</a>
+	</li>
 </ul>
