--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -41,4 +41,9 @@
 			Exo08 : Component Directives
 		</a>
 	</li>
+	<li>
+		<a routerLink="/exos/exo09">
+			Exo09 : Structural Directives
+		</a>
+	</li>
 </ul>
